# lcra

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  release.yml  tests.yml
api/: __init__.py
docs/: changelog.md  contributing.md  index.md  installation.md
lcra/: __init__.py
scraper/: __init__.py
src/lcra/: __init__.py  cli.py
src/scraper/: __init__.py
tests/: test_api.py  test_scraper.py
