[project]
name = "lcra"
version = "0.3.0"
description = "A Python library and CLI tool for extracting flood status, lake levels, river conditions, and floodgate operations from the LCRA Hydromet system"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "LCRA Contributors"}
]
keywords = ["lcra", "hydromet", "flood", "water-levels", "texas", "colorado-river"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Utilities",
]
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.40.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "click>=8.3.1",
    "rich>=14.3.1",
]

[project.urls]
Homepage = "https://github.com/lancereinsmith/lcra"
Documentation = "https://lancereinsmith.github.io/lcra"
Repository = "https://github.com/lancereinsmith/lcra"
Issues = "https://github.com/lancereinsmith/lcra/issues"
Changelog = "https://lancereinsmith.github.io/lcra/changelog/"

[project.scripts]
lcra = "lcra.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lcra", "src/scraper", "src/api"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.14",
    "ty>=0.0.13",
    "rumdl>=0.1.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
]

[tool.uv]
default-groups = ["dev", "docs"]

# ——— Ruff: lint and format (replaces black, isort, flake8) ———
[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ——— ty: type checking (replaces mypy, pyright) ———
[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
exclude = ["tests"]

# ——— rumdl: markdown format (mkdocs flavor) ———
# Global options live under [tool.rumdl]; [tool.rumdl.global] is for .rumdl.toml only.
[tool.rumdl]
flavor = "mkdocs"
respect-gitignore = true
disable = ["MD007", "MD013", "MD031", "MD033", "MD046"]
exclude = [".git", ".github", "node_modules", "vendor", "dist", "build", "CHANGELOG.md", "LICENSE.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=src/scraper --cov=src/api --cov=src/lcra --cov-report=term-missing --cov-report=html"
